jwt-ingress-only/ingress-echo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echo-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-ingress
spec:
  hosts:
  - "*"
  gateways:
  - echo-gateway
  http:
  - route:
    - destination:
        host: echo
        port:
          number: 80
